fix: correct Airflow run identity and Playwright readiness races
Send the Airflow run ID through the endpoint's query parameter so workflow
polling follows the execution that actually ran. Isolate bulk-import fixtures,
wait for deployment/filter/owner mutations, and split oversized lineage tests
without dropping their assertions. Keep deferred-widget visibility probes
non-blocking and remove redundant navigation.

Validated with 21 Java tests, 96 targeted Docker E2E executions, 33 browser
helper tests, and 100 deferred-widget regression executions, all with zero
retries. A separate 100-execution SSO/column-lineage investigation had 98
passes and two Chromium startup SIGSEGV failures; the original CI sign-in
and socket-reset causes remain unconfirmed.